# book-recommendation-system

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
data/: README.md
demo/: app.py
notebooks/: book_recommendation_analysis.ipynb
src/: __init__.py  data_loader.py  evaluator.py  preprocessor.py  recommender.py  utils.py  visualization.py
tests/: test_recommender.py
